<resources>
    <string name="app_name">TaskManager</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <!--error message-->
    <string name="error_network_not_available">Make sure you are connected to internet</string>
    <string name="error_server">Couldn\'t fetch data</string>
    <!---->

    <!--Login Strings-->
    <string name="login_hint_enter_email">Enter Email</string>
    <string name="login_action_sign_in">Sign in</string>
    <string name="login_action_sign_in_short">Sign in</string>
    <string name="login_hint_enter_password">Enter password</string>
    <string name="login_text_remember_me">Remember me</string>
    <string name="login_btn_sign_in">Sign in</string>
    <string name="login_error_username_empty">username field can\'t be empty</string>
    <string name="login_error_password_empty">password field can\'t be empty</string>
    <string name="login_verify_username_passowrd">Verifying username and password</string>
    <!---->

    <!--contacts strings-->
    <string name="contacts_toolbar_title_employee_contacts">Employee Contacts</string>
    <string name="contacts_loading_message">Please wait…</string>
    <!---->

    <!--content state strings-->
    <string name="content_state_loading_message">Please wait…</string>
    <!---->

    <!--add notes strings-->
    <string name="add_notes_hint_add_note_title">Add note title</string>
    <string name="add_notes_hint_add_description">Add description</string>
    <string name="notes_error_empty_title">Title field can\'t be empty</string>
    <string name="notes_error_empty_description">Description field can\'t be empty</string>
    <string name="notes_toolbar_title">All notes</string>
    <string name="fragment_note_list_empty_list">Empty List</string>
    <string name="add_note_mode_update">update</string>
    <string name="add_note_mode_insert">insert</string>
    <string name="add_note_fragment_data_removed">Data removed Successfully</string>
    <string name="add_note_fragment_error_data_remove">Data remove Error</string>
    <!---->

    <!--change status string-->
    <string name="title_change_status">Change Status</string>
    <string name="change_status_enter_remarks">Enter remarks (Optional)</string>
    <string name="change_status_dialog_dismiss">Dismiss</string>
    <!---->

    <!-- dashboard strings-->
    <string name="dashboard_user_type_administrator">Administrator</string>
    <string name="dashboard_user_type_office_staff">Office staff</string>

    <string name="dashboard_title_assigned_task">Assigned Task</string>
    <string name="dashboard_title_task_status">Task Status</string>
    <string name="dashboard_task_text_new">New</string>
    <string name="dashboard_task_text_open">Opened</string>
    <string name="dashboard_task_text_pending">Append</string>
    <string name="dashboard_task_text_complete">Completed</string>
    <string name="dashboard_error_empty_task">No data available to fetch</string>
    <string name="dashboard_empty_status">Empty</string>
    <!---->

    <!--fragment profile strings-->
    <string name="profile_title_personal_information">Personal Information</string>
    <string name="profile_text_name">Name</string>
    <string name="profile_text_username">Username</string>
    <string name="profile_text_email">Email</string>
    <string name="profile_text_address">Address</string>
    <string name="profile_text_permanent">Permanent</string>
    <string name="profile_text_temporary">Temporary</string>
    <string name="profile_text_contact">Contact</string>
    <string name="profile_toolbar_title">Your Profile</string>
    <!---->

    <!--fragment view tasks strings-->
    <string name="view_task_text_description">Description</string>
    <string name="view_task_text_task_status">Task status</string>
    <string name="view_task_text_task_priority">Task priority</string>
    <string name="view_task_title_client_information">Client Information</string>
    <string name="view_task_text_client_name">Client name</string>
    <string name="view_task_text_client_phone">Client phone</string>
    <string name="view_task_title_change_status">Change Status</string>
    <string name="view_task_text_open">Open Task</string>
    <string name="view_task_text_append_task">Append Task</string>
    <string name="view_task_title_complete_task">Complete Task</string>
    <string name="view_task_et_enter_remarks">Enter Remarks (optional)</string>
    <string name="view_task_tv_choose_file">Choose file</string>
    <string name="view_task_tv_upload_and_complete">Upload and Complete</string>
    <string name="view_task_text_assigned_date">Assigned date</string>
    <string name="view_task_text_deadline">Deadline</string>
    <string name="view_task_error_status_cant_change">You can\'t change, please select other option</string>
    <string name="view_task_error_storage_full">Please check your storage.</string>
    <string name="view_task_error_isufficent_memory">You have few space available, please make sure your have more than 5MB on disk to
            take pictures!</string>
    <string name="view_task_dialog_dimiss">Dismiss</string>
    <string name="view_task_error_empty_task">No task available</string>
    <string name="view_task_success_file_upload">File upload successful</string>

    <string name="view_task_text_take_photo">Take photo</string>
    <string name="view_task_text_gallery">Choose from gallery</string>
    <string name="view_task_text_dialog_dismiss">Dismiss</string>
    <string name="view_task_text_need_permissions">Need Permissions</string>
    <string name="view_task_text_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="view_task_go_to_settings">Go to settings</string>
    <string name="view_task_fragment_file_submitting_message">Please wait while submitting task..</string>
    <string name="view_task_fragment_status_open">Open</string>
    <string name="view_task_fragment_status_pending">Pending</string>
    <string name="view_task_fragment_title_task_information">Task Information</string>
    <string name="view_task_fragment_task_desc_not_available">Task description not available!</string>
    <string name="view_task_fragment_client_phone_not_available">Client phone not available!</string>
    <!---->

    <!--status view strings-->
    <string name="status_view_tv_view">View</string>
    <string name="status_text_loading">Please wait…</string>
    <string name="status_error_empty_task">No task available</string>
    <!---->

    <!--notification strings-->
    <string name="notification_text_loading">Please wait…</string>
    <string name="notification_toolbar_title">Notifications</string>
    <string name="notification_error_empty_notification">No data available to fetch</string>
    <!---->

    <!--taskdetails strings-->
    <string name="task_details_error_no_data">N/A</string>
    <!---->

    <!--progress dialog strings-->
    <string name="progress_dialog_loading">Loading…</string>

    <!--create new task strings -->
    <string name="create_new_task_toolbar_title">Create New Task</string>
    <string name="create_new_task_text_task_title">Title</string>
    <string name="create_new_task_text_task_deadline">Deadline</string>
    <string name="create_new_task_warning_important">- (Important)</string>
    <string name="create_new_task_warning_optional">- (Optional)</string>
    <string name="create_new_task_text_task_deatails">Task Details</string>
    <string name="create_new_task_text_task_priority">Task Priority</string>
    <string name="create_new_task_text_task_type">Task Type</string>
    <string name="create_new_task_text_task_client_name">Client Phone</string>
    <string name="create_new_task_text_task_client_phone">Client Phone</string>
    <string name="create_new_task_text_task_client_button">Add Task</string>
    <string name="create_new_task_deadline_example_hint">In days (Example. 1, 2, 3)</string>
    <string name="create_new_task_error_empty_field">Empty field!</string>

    <!---->

    <!--toolbar menu strings-->
    <string name="toolbar_menu_notification">Notification</string>
    <string name="toolbar_menu_profile">Profile</string>
    <string name="toolbar_menu_contacts">Contacts</string>
    <string name="toolbar_menu_note">Note</string>
    <string name="toolbar_menu_logout">Logout</string>
    <!---->

    <!--choose employee strings-->
    <string name="dialog_choose_employee_title">Employee Lists</string>
    <string name="dialog_choose_employee_btn_assign_task">Assign Task</string>

    <!---->

</resources>
