<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="setClient"
            type="com.techsales.taskmanager.data.model.viewmodel.taskdetails.TaskDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextStyleBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_small"
            android:text="@string/view_task_title_client_information"
            android:textSize="@dimen/h6_headline_medium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height"
            android:background="@color/colorView" />

        <TextView
            style="@style/TextViewTaskTitle"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_tiny_small"
            android:text="@string/view_task_text_client_name" />

        <TextView
            android:id="@+id/tvClientName"
            style="@style/TextViewTaskDetail"
            android:text="@{setClient.clientName}"
            android:textColor="@color/colorLightBlack"
            tools:text="Kantipur temple house" />

        <TextView
            style="@style/TextViewTaskTitle"
            android:paddingTop="@dimen/spacing_small"
            android:paddingBottom="@dimen/spacing_tiny_small"
            android:text="@string/view_task_text_client_phone" />

        <TextView
            android:id="@+id/tvClientPhone"
            style="@style/TextViewTaskDetail"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/spacing_small"
            android:autoLink="phone"
            android:text="@{setClient.clientPhone}"
            android:textColor="@color/colorLightBlack"
            tools:text="9808340360" />

    </LinearLayout>

</layout>